# lite-obs

src/: CMakeLists.txt  audio_resampler.cpp  fboinsgrenderer.cpp  fboinsgrenderer.h  lite-obs2_global.h  lite_encoder.cpp  lite_encoder.h  lite_encoder_info.h  lite_obs.cpp  lite_obs.h  lite_obs_avc.cpp  lite_obs_avc.h  lite_obs_core_audio.cpp  lite_obs_core_audio.h  lite_obs_core_video.cpp  lite_obs_core_video.h  lite_obs_info.h  lite_output.cpp  lite_output.h  lite_source.cpp  lite_source.h  main.cpp  main.qml  qml.qrc  video_frame.cpp  video_frame.h  video_info.h  video_scaler.cpp  video_scaler.h
src/cmake/Modules/: FindFFmpeg.cmake  FindJansson.cmake  Findpthread.cmake
src/encoder/: lite_aac_encoder.cpp  lite_aac_encoder.h  lite_ffmpeg_video_encoder.cpp  lite_ffmpeg_video_encoder.h  obs-ffmpeg-formats.h
src/graphics/: gl-helpers.cpp  gl-helpers.h  graphics.cpp  graphics.h  gs_device.cpp  gs_device.h  gs_device_android.cpp  gs_device_windows.cpp  gs_program.cpp  gs_program.h  gs_shader.cpp  gs_shader.h  gs_shader_info.h  gs_stagesurf.cpp  gs_stagesurf.h  gs_subsystem.cpp  gs_subsystem.h  gs_subsystem_info.h  gs_texture.cpp  gs_texture.h  gs_texture_render.cpp  gs_vertexbuffer.cpp  gs_vertexbuffer.h  shaders.cpp  shaders.h
src/media-io/: audio_info.h  audio_output.cpp  video-matrices.cpp  video_frame.cpp  video_output.cpp  video_output.h
src/output/: lite_ffmpeg_mux.cpp  lite_ffmpeg_mux.h  null_output.cpp  null_output.h
src/util/: bmem.cpp  bmem.h  log.h  threading.cpp  threading.h
